# coursework-Django

./: .env.example  .flake8  pyproject.toml
config/: settings.py  urls.py
mailings/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: run_mailings.py
mailings/migrations/: 0001_initial.py  0002_alter_mailing_sending_end_and_more.py  0003_mailing_owner_message_owner_recipient_owner.py  0004_alter_mailing_status_alter_mailingtry_date_time_and_more.py  0005_alter_recipient_email_alter_recipient_full_name.py  0006_alter_mailing_options.py
mailings/templates/mailings/: base.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailingtry_detail.html  mailingtry_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
mailings/templates/mailings/includes/: inc_navbar.html  inc_navbar_manager.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_manager_group.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: login.html  register.html  user_block_confirm.html  user_detail.html  user_list.html  user_profile.html  user_profile_form.html
users/templates/custom_registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
