[tool.poetry]
name = "coursework-django"
version = "0.1.0"
description = ""
authors = ["Anna <azeleranskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.5"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"
flake8 = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
